# ShanghaiTech-CS100-hw

hw_1/: a.out  p1.c  p2.c  p3.c  test.c
hw_2/: a.out  p1.c  p2.c  p3.c
hw_3/: a.out  p1.c  p2.c
hw_4/: 1.c  a.out  p1  p1.c  p2  p2.c  pacman_framework.c
hw_5/: a.out  p1.cpp  p2.cpp  p3.cpp  p4.cpp  test.cpp
hw_6/: a.out  hw6_template.cpp  p1.cpp
hw_7/7-1/: 7-1.tar  CMakeLists.txt  rational.tar  tests.cpp
hw_7/7-2/: 7-2.tar  CMakeLists.txt  matrix.hpp  rational.cpp  rational.hpp  tests.cpp
hw_7/7-3/: CMakeLists.txt  kmean.tar  kmeans.cpp  kmeans.hpp  old-kmeans.cpp
hw_8/src/: function.tar  functional_forms.hpp  newton.hpp  newton.tar  poly.hpp  poly.tar
hw_8/test/: test_polynomials.cpp
